[package]
name = "hoops"
version = "0.1.0"
authors = ["Devin Leamy <devinleamy@gmail.com>"]
edition = "2021"

[dependencies]
bevy = "0.9.0"
bevy-inspector-egui = "0.14.0"
bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader.git", features = ["stageless", "2d"] }
iyes_loopless = "0.9.1"
bevy_rapier2d = "0.19.0"
lazy_static = "1.4.0"
benimator = "4.1.0"

# wasm
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.60"

[profile.release]
opt-level = 's'
